# Decimal-in-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  s21_decimal.c  s21_decimal.h  s21_decimal_test.c  service_fun_arithmetic.c  service_fun_cast.c  service_fun_common.c  service_fun_comp.c
include/: decimal.h
source/: decimal.c  service_fun_arithmetic.c  service_fun_cast.c  service_fun_common.c  service_fun_comp.c
test/: CMakeLists.txt  tests.c
